# dfa_test

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  entrypoint.sh  manage.py  pyproject.toml
dfa_test/: asgi.py  settings.py  urls.py  wsgi.py
gallery/: managers.py  models.py  serializers.py  urls.py  views.py
gallery/migrations/: 0001_initial.py
nginx/: nginx.conf
users/: serializers.py  urls.py  views.py
